--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "core-js": "3",
     "expo": "~48.0.5",
     "expo-font": "~11.1.1",
+    "expo-sensors": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "link": "^1.5.1",
     "react": "18.2.0",
-    "react-native": "^0.71.3",
+    "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-raw-bottom-sheet": "^2.2.0",
