--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-font": "~11.1.1",
     "expo-sensors": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.3",
     "link": "^1.5.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
