--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~48.0.5",
     "expo-font": "~11.1.1",
     "expo-sensors": "~12.1.1",
+    "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.3",
     "link": "^1.5.1",
